syntax = "proto3";

package proto;

option go_package = "transactionpool";
option (gogoproto.stable_marshaler_all) = true;

import "gogo.proto";

//protoc --proto_path=$GOPATH/pkg/mod/github.com/gogo/protobuf@v1.3.2/gogoproto --proto_path=.  --gofast_out=. ./message_txpool.proto

message TxPoolMessage {
  enum TxPoolMessageType {
    Unknown = 0;
    Tx = 1;
  }
  TxPoolMessageType MsgType    = 1  [(gogoproto.jsontag) = "msgType"];
  bytes             FromDomain = 2  [(gogoproto.jsontag) = "fromDomain"];
  bytes             FromNode   = 3  [(gogoproto.jsontag) = "fromNode"];
  bytes             Data       = 4  [(gogoproto.jsontag) = "data"];
}

message TxMessage{
  bytes Data = 1  [(gogoproto.jsontag) = "data"];
}

